# embedding_mcp

./: .gitignore  .goreleaser.yaml  CLAUDE.md  LICENSE  Makefile  README.md  TODO.md  docker-compose.yml  go.mod  go.sum
.claude/agents/: designer.md  documenter.md  e2e-tester.md  finisher.md  implementer.md  reviewer.md  tech-leader.md  test-implementer.md
clients/python/: README.md  pyproject.toml
clients/python/src/mcp_memory_client/: __init__.py  client.py  exceptions.py  langchain_tools.py  models.py
clients/python/tests/: __init__.py  conftest.py  test_client.py  test_langchain_tools.py  test_models.py
cmd/mcp-memory/: main.go  main_test.go  search.go  search_test.go
docs/: development-flow.md  plan-oneshot-cli.md
docs/investigations/: phase0-task0-001.md
docs/plans/: phase0-task0.md  phase1-task1.md  phase10-task14-remaining.md  phase10-task14.md  phase11-task15.md  phase11-task16.md  phase2-task2.md  phase2-task3.md  phase2-task4.md  phase2-task5.md  phase3-task6.md  phase4-task7.md  phase5-task8.md  phase5-task9.md  phase6-task10.md  phase7-task11.md  phase8-task12.md  phase9-task13.md
docs/progress/: phase0-task0.json  phase1-task1.json  phase10-task14-remaining.json  phase10-task14.json  phase11-task15.json  phase11-task16.json  phase2-task2.json  phase2-task3.json  phase2-task4.json  phase2-task5.json  phase3-task6.json  phase4-task7.json  phase5-task8.json  phase5-task9.json  (+4 more)
e2e/: README.md  e2e_test.go  group_e2e_test.go  helper_test.go  mcp_e2e_test.go  qdrant_e2e_test.go
requirements/: embedded_skill_spec.md  embedded_spec.md
(+71 files in other folders)
